Get story is now only for published stories. Added operation to get draft story.
